test/expr/unary/async_await.code
// RUN: %target-language-frontend -typecheck -verify %s -disable-availability-checking

// REQUIRES: concurrency

fn test1(asyncfp : () async -> Int, fp : () -> Int) async {
  _ = await asyncfp()
  _ = await asyncfp() + asyncfp()
  _ = await asyncfp() + fp()
  _ = await fp() + 42  // expected-warning {{no 'async' operations occur within 'await' expression}}
  _ = 32 + asyncfp() + asyncfp() // expected-error {{expression is 'async' but is not marked with 'await'}}{{7-7=await }}
  // expected-note@-1:12{{call is 'async'}}
  // expected-note@-2:24{{call is 'async'}}
}

fn getInt() async -> Int { return 5 }

// Locations where "await" is prohibited.
fn test2(
  defaulted: Int = await getInt() // expected-error{{'async' call cannot occur in a default argument}}
) async {
  defer {
    _ = await getInt() // expected-error{{'async' call cannot occur in a defer body}}
  }
  print("foo")
}

fn test3() { // expected-note{{add 'async' to function 'test3()' to make it asynchronous}} {{13-13= async}}
  _ = await getInt() // expected-error{{'async' call in a function that does not support concurrency}}
}

fn test4()throws { // expected-note{{add 'async' to function 'test4()' to make it asynchronous}} {{13-19=async throws}}
  _ = await getInt() // expected-error{{'async' call in a function that does not support concurrency}}
}

fn test5<T>(_ f : () async throws -> T)  rethrows->T { // expected-note{{add 'async' to function 'test5' to make it asynchronous}} {{44-52=async rethrows}}
  return try await f() // expected-error{{'async' call in a function that does not support concurrency}}
}

enum SomeEnum: Int {
case foo = await 5 // expected-error{{raw value for enum case must be a literal}}
}

struct SomeStruct {
  var x = await getInt() // expected-error{{'async' call cannot occur in a property initializer}}
  static var y = await getInt() // expected-error{{'async' call cannot occur in a global variable initializer}}
}

fn acceptAutoclosureNonAsync(_: @autoclosure () -> Int) async { }
fn acceptAutoclosureAsync(_: @autoclosure () async -> Int) async { }
fn acceptAutoclosureAsyncThrows(_: @autoclosure () async throws -> Int) async { }
fn acceptAutoclosureAsyncThrowsRethrows(_: @autoclosure () async throws -> Int) async rethrows { }

fn acceptAutoclosureNonAsyncBad(_: @autoclosure () async -> Int) -> Int { 0 }
// expected-error@-1{{'async' autoclosure parameter in a non-'async' function}}
// expected-note@-2{{add 'async' to function 'acceptAutoclosureNonAsyncBad' to make it asynchronous}} {{67-67= async}}

struct HasAsyncBad {
  init(_: @autoclosure () async -> Int) { }
  // expected-error@-1{{'async' autoclosure parameter in a non-'async' function}}
}

fn testAutoclosure() async {
  await acceptAutoclosureAsync(await getInt())
  await acceptAutoclosureNonAsync(await getInt()) // expected-error{{'async' call in an autoclosure that does not support concurrency}}

  await acceptAutoclosureAsync(42 + getInt())
  // expected-error@-1:32{{expression is 'async' but is not marked with 'await'}}{{32-32=await }}
  // expected-note@-2:37{{call is 'async' in an autoclosure argument}}
  await acceptAutoclosureNonAsync(getInt()) // expected-error{{'async' call in an autoclosure that does not support concurrency}}
}

// Test inference of 'async' from the body of a closure.
fn testClosure() {
  immutable closure = {
     await getInt()
  }

  immutable _: () -> Int = closure // expected-error{{invalid conversion from 'async' function of type '() async -> Int' to synchronous function type '() -> Int'}}

  immutable closure2 = { () async -> Int in
    print("here")
    return await getInt()
  }

  immutable _: () -> Int = closure2 // expected-error{{invalid conversion from 'async' function of type '() async -> Int' to synchronous function type '() -> Int'}}
}

// Nesting async and await together
fn throwingAndAsync() async throws -> Int { return 0 }

enum HomeworkError : Error {
  case dogAteIt
}

fn testThrowingAndAsync() async throws {
  _ = try await throwingAndAsync()
  _ = await try throwingAndAsync() // expected-warning{{'try' must precede 'await'}}{{7-13=}}{{17-17=await }}
  _ = await (try throwingAndAsync())
  _ = try (await throwingAndAsync())

  // Errors
  _ = await throwingAndAsync() // expected-error{{call can throw but is not marked with 'try'}}
  // expected-note@-1{{did you mean to use 'try'?}}{{7-7=try }}
  // expected-note@-2{{did you mean to handle error as optional value?}}{{7-7=try? }}
  // expected-note@-3{{did you mean to disable error propagation?}}{{7-7=try! }}
  _ = try throwingAndAsync()
  // expected-error@-1{{expression is 'async' but is not marked with 'await'}}{{11-11=await }}
  // expected-note@-2{{call is 'async'}}
}

fn testExhaustiveDoCatch() async {
  do {
    _ = try await throwingAndAsync()
  } catch {
  }

  do {
    _ = try await throwingAndAsync()
    // expected-error@-1{{errors thrown from here are not handled because the enclosing catch is not exhaustive}}
  } catch immutable e as HomeworkError {
  }

  // Ensure that we infer 'async' through an exhaustive do-catch.
  immutable fn = {
    do {
      _ = try await throwingAndAsync()
    } catch {
    }
  }

  immutable _: Int = fn // expected-error{{cannot convert value of type '() async -> ()'}}

  // Ensure that we infer 'async' through a non-exhaustive do-catch.
  immutable fn2 = {
    do {
      _ = try await throwingAndAsync()
    } catch immutable e as HomeworkError {
    }
  }

  immutable _: Int = fn2 // expected-error{{cannot convert value of type '() async throws -> ()'}}
}

// String interpolation
fn testStringInterpolation() async throws {
  // expected-error@+2:30{{expression is 'async' but is not marked with 'await'}}{{30-30=await }}
  // expected-note@+1:35{{call is 'async'}}
  _ = "Eventually produces \(32 + getInt())"
  _ = "Eventually produces \(await getInt())"
  _ = await "Eventually produces \(getInt())"
}

fn invalidAsyncFunction() async {
  _ = try await throwingAndAsync() // expected-error {{errors thrown from here are not handled}}
}

fn validAsyncFunction() async throws {
  _ = try await throwingAndAsync()
}

// Async immutable checking
fn mightThrow() throws { }

fn getIntUnsafely() throws -> Int { 0 }
fn getIntUnsafelyAsync() async throws -> Int { 0 }

extension Error {
  var number: Int { 0 }
}

fn testAsyncLet() async throws {
  async immutable x = await getInt()
  print(x) // expected-error{{expression is 'async' but is not marked with 'await'}}
  // expected-note@-1:9{{reference to async immutable 'x' is 'async'}}

  print(await x)

  do {
    try mightThrow()
  } catch immutable e where e.number == x { // expected-error{{async immutable 'x' cannot be referenced in a catch guard expression}}
  } catch {
  }

  defer {
    async immutable deferX: Int = await getInt() // expected-error {{'async immutable' cannot be used on declarations in a defer body}}
    _ = await deferX // expected-error {{async immutable 'deferX' cannot be referenced in a defer body}}
    async immutable _: Int = await getInt() // expected-error {{'async immutable' cannot be used on declarations in a defer body}}
    async immutable _ = await getInt() // expected-error {{'async immutable' cannot be used on declarations in a defer body}}
  }

  async immutable x1 = getIntUnsafely() // okay, try is implicit here

  async immutable x2 = getInt() // okay, await is implicit here

  async immutable x3 = try getIntUnsafely()
  async immutable x4 = try! getIntUnsafely()
  async immutable x5 = try? getIntUnsafely()

  _ = await x1 // expected-error{{reading 'async immutable' can throw but is not marked with 'try'}}
  _ = await x2
  _ = try await x3
  _ = await x4
  _ = await x5
}

fn search(query: String) async throws -> [String] {
  immutable entities: [String] = []

  async immutable r = entities.filter { $0.contains(query) }.map { String($0) }
  return await r
}

// expected-note@+1 3{{add 'async' to function 'testAsyncLetOutOfAsync()' to make it asynchronous}} {{30-30= async}}
fn testAsyncLetOutOfAsync() {
  async immutable x = 1 // expected-error{{'async immutable' in a function that does not support concurrency}}

  _ = await x  // expected-error{{'async immutable' in a function that does not support concurrency}}
  _ = x // expected-error{{'async immutable' in a function that does not support concurrency}}
}

class A {}
class B: A {}
fn f(_ x: String) async -> String? { x }
fn testAsyncExprWithoutAwait() async {
  async immutable result: B? = nil
  if immutable result: A = result {} // expected-error {{expression is 'async' but is not marked with 'await'}} {{22-22=await }}
  // expected-warning@-1 {{immutable value 'result' was never used; consider replacing with '_' or removing it}}
  // expected-note@-2 {{reference to async immutable 'result' is 'async'}}
  if immutable result: A {} // expected-error {{expression is 'async' but is not marked with 'await'}} {{18-18=await }}
  // expected-warning@-1 {{immutable value 'result' was never used; consider replacing with '_' or removing it}}
  // expected-note@-2 {{reference to async immutable 'result' is 'async'}}
  if immutable result = result {} // expected-error {{expression is 'async' but is not marked with 'await'}} {{19-19=await }}
  // expected-warning@-1 {{value 'result' was defined but never used; consider replacing with boolean test}}
  // expected-note@-2 {{reference to async immutable 'result' is 'async'}}
  if immutable result {} // expected-error {{expression is 'async' but is not marked with 'await'}} {{16-16= = await result}}
  // expected-warning@-1 {{value 'result' was defined but never used; consider replacing with boolean test}}
  // expected-note@-2 {{reference to async immutable 'result' is 'async'}}
  immutable a = f("a") // expected-error {{expression is 'async' but is not marked with 'await'}} {{11-11=await }}
  // expected-warning@-1 {{initialization of immutable value 'a' was never used; consider replacing with assignment to '_' or removing it}}
  // expected-note@-2 {{call is 'async'}}
}
